added logo and some meta data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collsion Game</title>
+    <link rel="icon" href="https://res.cloudinary.com/diusqrvy9/image/upload/v1711957511/collision_plkuin.png">
+
+    <!-- * Facebook Meta Tags -->
+    <meta property="og:url" content="https://ankur-soni-21.github.io/Collsions">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Collsions">
+    <meta property="og:description" content="A Simple Collsion Game For Fun!">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/diusqrvy9/image/upload/v1711957511/collision_plkuin.png">
+
+    <!-- * Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="ankur-soni-21.github.io">
+    <meta property="twitter:url" content="https://ankur-soni-21.github.io/Collsions">
+    <meta name="twitter:title" content="Collsions">
+    <meta property="twitter:description" content="A Simple Collsion Game For Fun!">
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/diusqrvy9/image/upload/v1711957511/collision_plkuin.png">
+
     <style>
         body {
             margin: 0;
