--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collsion Game</title>
     <link rel="icon" href="https://res.cloudinary.com/diusqrvy9/image/upload/v1711957511/collision_plkuin.png">
+    <meta name="description" content="Save! Collide ! Win!">
 
     <!-- * Facebook Meta Tags -->
     <meta property="og:url" content="https://ankur-soni-21.github.io/Collsions">
